[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "route_tracker"
authors = [{name = "Ali Ghahraei Figueroa", email = "aligf94@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/AliGhahraei/route-tracker"


[tool.mypy]
files = ['route_tracker', 'tests', '*.py']
strict = true
